src/objects/MCAR_Claim_Management__c.object
<CustomObject>
    <description>Object for Claim management process</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Amount that is agreed between Claim Team and Supplier, that will be paid to NSN</inlineHelpText>
        <label>Negotiated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approvals_comments__c</fullName>
        <description>Text field for approvals to allow entering comments.</description>
        <label>Approvals comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Comments__c</fullName>
        <label>Reason For Cancellation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_Manager_Email__c</fullName>
        <description>Category Manager Email</description>
        <label>Category Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Category_Manager_Name__c</fullName>
        <label>Category Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Direction__c</fullName>
        <inlineHelpText>&quot;Outgoing&quot; means it is Nokia&apos;s claim against the supplier; &quot;Incoming&quot; is a supplier&apos;s claim against Nokia.</inlineHelpText>
        <label>Claim Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Incoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim_Open_Date__c</fullName>
        <description>Date field used to send the Email notification to be sent to Owner once the claim is in &quot;Claim&quot; status for longer than 30 days.</description>
        <label>Claim Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Preparer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Preparer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MCAR_Claim_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Stage_Status_Date__c</fullName>
        <description>Claim Stage Status Date</description>
        <label>Claim Stage Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <inlineHelpText>Possible status: Draft &gt; Data Collection &gt; Negotiation &gt; Payments &gt; Closed or Cancelled</inlineHelpText>
        <label>Claim Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Data Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <inlineHelpText>Typically Global Claims are ≥ 50 kEuro while Local Claims are &lt; 50 kEuro.</inlineHelpText>
        <label>Claim Type</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Business_Line__c</fullName>
        <label>Business Line</label>
        <picklist>
            <controllingField>Claims_Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Voice &amp; IP Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSM Radio Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCDMA Radio Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE Radio Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA/LTE Radio Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packet Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packet Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Business Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering &amp; Productivity (EP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiradio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antenna Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Implementation - Ancillary/Implementation Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Implementation - Construction Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Implementation - Outside Plant Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Implementation - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 GHz MT-RRH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 GHz DDRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 GHz MT-RRH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 GHz Slim to LTE Upgrade Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 GHz UBS to LTE Upgrade Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G- Fiber BBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G Fiber RRU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 MHz DDRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 MHz MT-RRH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 MHz Slim to LTE Upgrade Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 MHz UBS to LTE Upgrade Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Node</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AA (Application Analytics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA-CT (AA Common Central Team)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-FANBI (ALU Fixed Networks NBI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-FNA (ALU-FNA - New Activities)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-FND (Fixed Networks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-MVM (ALU - Multivendor Maintenance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONCD (ION Central Team)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONIPR (ALU ION IP Routing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONNBI (ION OPTICS NBI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONOP (ION - OPTICS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IONVID (ALU-ION-IP VIDEO )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-3PI (3PI - 3rd Party Integration)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-COPR (ALU-MN Project related)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-HLN (ALU-MN HLN (backlog))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MCT (MOBILE CENTRAL TEAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MOB (MN-MOBILE )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MSA (ALU-MN Service Assurance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MSI (MN - SDM - IMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-MSPD (Managed Serv. andCyber Security)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-NBI (Network Build and Implementat. (backlog))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-WNBI (Wireless Network Build and Implement.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN-WTD (MOBILE Wireless Transmission)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-BLD (Bell Labs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-BPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-CS (Consulting Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-IPCS (Intellectual Property Business Division)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-OTHFUN (OTHER R and D FUNDING)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-RFS (Radio Frequency Systems)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH-SMD (Submarine)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Product_Name__c</fullName>
        <label>Product Name</label>
        <picklist>
            <controllingField>Claims_Business_Line__c</controllingField>
            <picklistValues>
                <fullName>LTE 2.3GHZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9 CLPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9CLPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.9G CDMA XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1X MODEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1X MODEM PICO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1XMODEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2*2LTE PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G DDRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G LPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G SLIM XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G TRX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G UBS XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1G XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1RFH/800RFH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 CLPA/1,9 CLPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 MHZ XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 RFH TANAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800CLPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M SLIM XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M UBS XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M CDMA XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M SLIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800M XMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800RFH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTA 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADPDU-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALARM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Colour_Status__c</fullName>
        <formula>IF(ISPICKVAL(Claim_Status__c, &quot;Data Collection&quot; ) || ISPICKVAL

(Claim_Status__c, &quot;Payments&quot; ) ||ISPICKVAL(Claim_Status__c, &quot;Negotiation&quot; 

),IF(ISBLANK(Total_Cost_To_Be_Claimed__c) || (Total_Cost_To_Be_Claimed__c &gt;= 

500 &amp;&amp; Total_Cost_To_Be_Claimed__c &lt;= 50000) , 
IF(TODAY() - Open_Date__c &lt;= 90,IMAGE(&quot;resource/Claim_Green&quot;,&quot;Green&quot;,10,50), 

IF((TODAY() - Open_Date__c &gt; 90 &amp;&amp; TODAY() - Open_Date__c &lt;= 120),IMAGE

(&quot;resource/Claim_Yellow&quot;,&quot;Yellow&quot;,10,50),IMAGE(&quot;resource/Claims_Red&quot;,&quot;Red&quot;, 

10, 50)) ) 
,IF(Total_Cost_To_Be_Claimed__c &gt; 50000 &amp;&amp; Total_Cost_To_Be_Claimed__c &lt;= 

500000,IF(TODAY() - Open_Date__c &lt;= 180 ,IMAGE

(&quot;resource/Claim_Green&quot;,&quot;Green&quot;,10,50), IF((TODAY() - Open_Date__c &gt; 180 &amp;&amp; 

TODAY() - Open_Date__c &lt;= 240),IMAGE

(&quot;resource/Claim_Yellow&quot;,&quot;Yellow&quot;,10,50),IMAGE(&quot;resource/Claims_Red&quot;,&quot;Red&quot;, 

10, 50)) ), IF(Total_Cost_To_Be_Claimed__c &gt; 500000,IF(TODAY() - Open_Date__c &lt; 365,IMAGE

(&quot;resource/Claim_Green&quot;,&quot;Green&quot;,10,50),IF((TODAY() - Open_Date__c &gt; 365 &amp;&amp; TODAY() - Open_Date__c &lt;= 457),IMAGE

(&quot;resource/Claim_Yellow&quot;,&quot;Yellow&quot;,10,50),IMAGE(&quot;resource/Claims_Red&quot;,&quot;Red&quot;, 

10, 50))),IMAGE

(&quot;resource/Claim_Yellow&quot;,&quot;Yellow&quot;,10,50)))) , &apos;&apos;)</formula>
        <label>Cycle Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity_Manager_Approved_Date__c</fullName>
        <description>Commodity Manager Approved Date</description>
        <inlineHelpText>Commodity Manager Approved Date</inlineHelpText>
        <label>Category Manager Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commodity_Manager_Review_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Commodity Manager Review Approval</description>
        <inlineHelpText>Please confirm if the Category Manager has endorsed this Claim as stated</inlineHelpText>
        <label>Category  Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Discounts_Total__c</fullName>
        <label>Confirmed Discounts - Total</label>
        <summarizedField>Claim_Final_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim_Final_Payment__c.Payment_Validated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Claim_Final_Payment__c.Payment_or_Discount__c</field>
            <operation>equals</operation>
            <value>Write Off</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim_Final_Payment__c.Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confirmed_Payments_Total__c</fullName>
        <description>Total payments received during the Claim phase</description>
        <label>Confirmed Payments - Total</label>
        <summarizedField>Claim_Final_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim_Final_Payment__c.Payment_Validated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Claim_Final_Payment__c.Payment_or_Discount__c</field>
            <operation>equals</operation>
            <value>Payment/Credit Note, Write Off</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim_Final_Payment__c.Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confirmed_Payments__c</fullName>
        <description>Sums all payment entries in Payment Log where the field, “Payment or Write Off?” = Payment/Credit Note</description>
        <label>Confirmed Payments</label>
        <summarizedField>Claim_Final_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim_Final_Payment__c.Payment_or_Discount__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim_Final_Payment__c.Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Confirmed_Write_Offs__c</fullName>
        <description>Sums all payment entries in Payment Log where the field, “Payment or Write Off?” = Write Off</description>
        <label>Confirmed Write Offs</label>
        <summarizedField>Claim_Final_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim_Final_Payment__c.Payment_or_Discount__c</field>
            <operation>equals</operation>
            <value>Write Off</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim_Final_Payment__c.Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Corrective_Actions_Summary__c</fullName>
        <description>Corrective Actions Summary</description>
        <inlineHelpText>Please provide a synopsis of all corrective actions that have been completed (Steps 5D, 6D and 7D)</inlineHelpText>
        <label>Corrective Actions Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrencyPL__c</fullName>
        <description>Currency</description>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>European Euro-EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States Dollar-USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese Yuan Renminbi-CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Rupee-INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghan Afghani-AFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian Lek-ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian Dinar-DZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angolan Kwanza-AOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentine Peso-ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian Dram-AMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruban Florin-AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Dollar-AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani Manat-AZN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamian Dollar-BSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahraini Dinar-BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladeshi Taka-BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbadian Dollar-BBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarusian Ruble-BYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize Dollar-BZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermudian Dollar-BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutanese Ngultrum-BTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivian Boliviano-BOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina Convertible Mark-BAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana Pula-BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazilian Real-BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Dollar-BND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian Lev-BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi Franc-BIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodian Riel-KHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Dollar-CAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Claim_Amount__c</fullName>
        <inlineHelpText>The amount that a customer has claimed against Nokia (referring to this claim.)</inlineHelpText>
        <label>Customer Claim Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Notification_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data_Collection_Notification_Send</description>
        <label>Data Collection Notification Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Open_Date__c</fullName>
        <description>Used to send the reminder if claim remains in Data Collection status for longer than 30 days</description>
        <inlineHelpText>Data Collection open date</inlineHelpText>
        <label>Data Collection Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_claim_Notification_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data claim Notification Send</description>
        <inlineHelpText>Data claim Notification Send</inlineHelpText>
        <label>Data claim Notification Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Problem_Was_First_Detected__c</fullName>
        <inlineHelpText>If applicable, the date when this issue was first known.</inlineHelpText>
        <label>Date Problem Was First Detected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>To calculate the open days for stage Draft.</description>
        <formula>if( ISPICKVAL( Claim_Status__c , &apos;Draft&apos;) ,today() - Open_Date__c , if( ISPICKVAL( Claim_Status__c , &apos;Data Collection&apos;) ,today() - Open_Date__c , 
if( ISPICKVAL( Claim_Status__c , &apos;Closed&apos;) ,Closed_Date__c-Open_Date__c,today() - Open_Date__c )))</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <formula>IF(  Manufacturer__c != null ,  Manufacturer__r.Enterprise_ID__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer EnterpriseID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Closing_Date__c</fullName>
        <inlineHelpText>If applicable, the goal date for when this Claim should be completed.</inlineHelpText>
        <label>Expected Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Facility from where the claim was initiated, or that is otherwise associated with this claim.</inlineHelpText>
        <label>Facility</label>
        <referenceTo>MCAR_Facility__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Claim_Letter_Sent__c</fullName>
        <label>First Claim Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frame_Agreement__c</fullName>
        <description>Frame Agreement</description>
        <label>Frame Agreement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Facility_Name__c</fullName>
        <label>H_Facility_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Related_Claim__c</fullName>
        <label>H Related Claim</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_Agree_Negotiation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I Agree Negotiation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To approve the claim by claim owner</description>
        <label>I Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Reclamation_Sent__c</fullName>
        <label>Last Reclamation Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Analysis_Approved_Date__c</fullName>
        <inlineHelpText>Legal Analysis Approved Date</inlineHelpText>
        <label>Legal Analysis Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Team_Review_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Legal Team Review Approval</description>
        <inlineHelpText>If applicable, please confirm if Legal has endorsed this Claim.</inlineHelpText>
        <label>Legal Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Accepts_Full_Responsibility__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please confirm if the Supplier has confirmed that this issue was their responsibility.</inlineHelpText>
        <label>Manufacturer Accepts Full Responsibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Email__c</fullName>
        <label>Manufacturer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <description>This field is used to store Name of Claim Contact of Type Manufacturer.</description>
        <label>Manufacturer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Manufacturer for general info section</description>
        <inlineHelpText>Supplier that will be the recipient of this claim.</inlineHelpText>
        <label>Manufacturer</label>
        <referenceTo>MCAR_Manufacturer__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Materials_Factory_Loss__c</fullName>
        <description>Materials-Factory Loss</description>
        <inlineHelpText>Total cost summation of the NCC Materials Factory Worksheets, below</inlineHelpText>
        <label>Materials Factory Loss</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Materials_Field_Loss__c</fullName>
        <inlineHelpText>Total cost summation of the NCC Materials Field Worksheets, below</inlineHelpText>
        <label>Materials Field Loss</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Materials_Hub_Loss__c</fullName>
        <description>Materials-Hub Loss</description>
        <inlineHelpText>Total cost summation of the NCC Materials Hub Worksheets, below</inlineHelpText>
        <label>Materials Hub Loss</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <inlineHelpText>Repayment method(s) that Claim Team and Supplier have agreed to</inlineHelpText>
        <label>Method of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nokia_Action_Summary__c</fullName>
        <label>Nokia Action Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Conformance_Costs_Approved_Date__c</fullName>
        <description>Non-Conformance Costs Approved Date</description>
        <inlineHelpText>Non-Conformance Costs Approved Date</inlineHelpText>
        <label>Non-Conformance Costs Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nonconformance_Costs_Review_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nonconformance Costs Review Approval</description>
        <inlineHelpText>If applicable, please confirm if the Claim Team has endorsed all costs (NCC) as stated above</inlineHelpText>
        <label>Non-Conformance Costs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Date that the Claim went from Draft status to Data Collection status</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Other Information</description>
        <inlineHelpText>If applicable, add any other information relevant to this Claim.</inlineHelpText>
        <label>Other Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Override_Claim_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox to change the Claim Type manually (Global or Local)</inlineHelpText>
        <label>Override Claim Type</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>